asp-append-version="true" Img uchun taghelperdir senin sekillerini hashCode ye chevirir belelikle performans itkisi olmur

--- a/TestingMVC/Views/Home/Details.cshtml
+++ b/TestingMVC/Views/Home/Details.cshtml
@@ -12,7 +12,7 @@
             </div>
 
             <div class="card-body text-center">
-                <img class="card-img-top" src="~/images/img1.jpg" />
+                <img class="card-img-top" src="~/images/img1.jpg" asp-append-version="true"/>
 
                 <h4>Employee ID : @Model.Id</h4>
                 <h4>Email : @Model.Email</h4>
