Adding Choose Photos

--- a/TestingMVC/Views/Home/Details.cshtml
+++ b/TestingMVC/Views/Home/Details.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Employee Details";
+    var photoPath = "~/Images/" + (Model.PhotoPat?? "img1.jpg");
 }
 
 <div class="row justify-content-center m-3">
@@ -12,7 +13,7 @@
             </div>
 
             <div class="card-body text-center">
-                <img class="card-img-top" src="~/images/img1.jpg" asp-append-version="true"/>
+                <img class="card-img-top" src="@photoPath" asp-append-version="true"/>
 
                 <h4>Employee ID : @Model.Id</h4>
                 <h4>Email : @Model.Email</h4>
