--- a/TestingMVC/Views/Home/Create.cshtml
+++ b/TestingMVC/Views/Home/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Employee
+﻿@model TestingMVC.ViewModels.EmployeeCreateViewModel
 
 @{
     ViewBag.Title = "Create Employee";
 }
 
-<form asp-controller="home" asp-action="create" method="post" class="mt-3">
+<form enctype="multipart/form-data" asp-controller="home" asp-action="create" method="post" class="mt-3">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group row">
         <label asp-for="Name" class="col-sm-2 col-form-label"></label>
@@ -31,10 +31,32 @@
             <span asp-validation-for="Department" class="text-danger"></span>
         </div>
     </div>
+    
+    
+    <div class="form-group row">
+        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <div class="custom-file">
+                <input asp-for="Photo" class="form-control custom-file-input">
+                <label class="custom-file-label"> Chose File..</label>
+            </div>
+        </div>
+    </div>
+
 
     <div class="form-group row">
         <div class="col-sm-10">
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </div>
+    @section Scripts{
+        <script>
+            $(document).ready(function() {
+                $('.custom-control-input').on("change", function() {
+                    var fileName = $(this).val().split("\\").pop();
+                    $(this).next('.custom-file-label').html(fileName);
+                });
+            });
+        </script>
+    }
 </form>
