--- a/TestingMVC/Views/Home/Index.cshtml
+++ b/TestingMVC/Views/Home/Index.cshtml
@@ -7,11 +7,13 @@
 <div class="card-deck">
     @foreach (var employee in Model)
     {
-        <div class="card m-4">
+        var photoPath = "~/Images/" + (employee.PhotoPat?? "img1.jpg");
+
+        <div class="card m-4" style="min-width: 18em; max-width: 30.5%">
             <div class="card-header">
                 <h3>@employee.Name</h3>
             </div>
-            <img class="card-img-top" src="~/images/img1.jpg" asp-append-version="true" />
+            <img class="card-img-top imageThumbnail" src="@photoPath" asp-append-version="true"  />
             <div class="card-footer text-center">
                 <a asp-controller="Home" asp-action="Details" asp-route-id="@employee.Id" class="btn btn-primary m-1">View</a>
                 <a href="#" class="btn btn-primary m-1" >Edit</a>
