--- a/TestingMVC/Views/Home/Create.cshtml
+++ b/TestingMVC/Views/Home/Create.cshtml
@@ -31,13 +31,13 @@
             <span asp-validation-for="Department" class="text-danger"></span>
         </div>
     </div>
-    
-    
+
+
     <div class="form-group row">
-        <label asp-for="Photo" class="col-sm-2 col-form-label"></label>
+        <label asp-for="Photos" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <div class="custom-file">
-                <input asp-for="Photo" class="form-control custom-file-input">
+                <input multiple asp-for="Photos" class="form-control custom-file-input">
                 <label class="custom-file-label"> Chose File..</label>
             </div>
         </div>
@@ -49,12 +49,18 @@
             <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </div>
-    @section Scripts{
+    @section Scripts {
         <script>
-            $(document).ready(function() {
-                $('.custom-control-input').on("change", function() {
-                    var fileName = $(this).val().split("\\").pop();
-                    $(this).next('.custom-file-label').html(fileName);
+            $(document).ready(function () {
+                $('.custom-file-input').on("change", function () {
+                    var fileLabel = $(this).next('.custom-file-label');
+                    var files = $(this)[0].files;
+                    if (files.length > 1) {
+                        fileLabel.html(files.length + ' files selected');
+                    }
+                    else if (files.length == 1) {
+                        fileLabel.html(files[0].name);
+                    }
                 });
             });
         </script>
