--- a/TestingMVC/Views/_ViewImports.cshtml
+++ b/TestingMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using TestingMVC.Models
+@using TestingMVC.ViewModels
+@using Microsoft.AspNetCore.Identity
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
