--- a/TestingMVC/Views/Account/Register.cshtml
+++ b/TestingMVC/Views/Account/Register.cshtml
@@ -23,6 +23,10 @@
                 <input asp-for="ConfirmPassword" class="form-control"/>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control"/>
+            </div>
             <button class="btn btn-primary" type="submit">Register</button>
         </form>
     </div>
