--- a/TestingMVC/Views/UserRole/ListRoles.cshtml
+++ b/TestingMVC/Views/UserRole/ListRoles.cshtml
@@ -21,7 +21,8 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a href="#" class="btn btn-primary">Edit</a>
+                <a  class="btn btn-primary " asp-controller="UserRole" asp-action="EditRole"
+                   asp-route-id="@role.Id">Edit</a>
                 <a href="#" class="btn btn-danger">Delete</a>
             </div>
         </div>
