--- a/TestingMVC/Views/Administration/EditRole.cshtml
+++ b/TestingMVC/Views/Administration/EditRole.cshtml
@@ -48,8 +48,8 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" class="btn btn-primary" style="width:auto">Add Users</a>
-            <a href="#" class="btn btn-primary" style="width:auto">Remove Users</a>
+            <a asp-controller="Administration" asp-action="EditUsersInRole" 
+             asp-route-id="@Model.Id"  class="btn btn-primary" style="width:auto">Add or Remove Users</a>
         </div>
     </div>
 </form>
