--- a/TestingMVC/Views/Administration/ListRoles.cshtml
+++ b/TestingMVC/Views/Administration/ListRoles.cshtml
@@ -9,7 +9,7 @@
 @if (Model.Any())
 {
     <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateUserRole"
-       asp-controller="UserRole">Add new role</a>
+       asp-controller="Administration">Add new role</a>
 
     foreach (var role in Model)
     {
@@ -21,7 +21,7 @@
                 <h5 class="card-title">@role.Name</h5>
             </div>
             <div class="card-footer">
-                <a  class="btn btn-primary " asp-controller="UserRole" asp-action="EditRole"
+                <a  class="btn btn-primary " asp-controller="Administration" asp-action="EditRole"
                    asp-route-id="@role.Id">Edit</a>
                 <a href="#" class="btn btn-danger">Delete</a>
             </div>
@@ -39,7 +39,7 @@ else
                 Use the button below to create a role
             </h5>
             <a class="btn btn-primary" style="width:auto"
-               asp-controller="UserRole" asp-action="CreateUserRole">
+               asp-controller="Administration" asp-action="CreateUserRole">
                 Create Role
             </a>
         </div>
