--- a/TestingMVC/Views/Shared/_Layout.cshtml
+++ b/TestingMVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,12 @@
                     <li class="nav-item">
                         <a asp-action="Create" asp-controller="Home" class="nav-link">Create</a>
                     </li>
-
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin")||User.IsInRole("User"))
+                    {
+                        <li class="nav-item">
+                            <a asp-action="ListRoles" asp-controller="Administration" class="nav-link">Manage Roles</a>
+                        </li>
+                    }
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     @*if User Sign profile*@
