--- a/TestingMVC/Views/Shared/_Layout.cshtml
+++ b/TestingMVC/Views/Shared/_Layout.cshtml
@@ -28,8 +28,17 @@
                     </li>
                     @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin")||User.IsInRole("User"))
                     {
-                        <li class="nav-item">
-                            <a asp-action="ListRoles" asp-controller="Administration" class="nav-link">Manage Roles</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Manage
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" asp-controller="Administration"
+                                   asp-action="ListUsers">Users</a>
+                                <a class="dropdown-item" asp-controller="Administration"
+                                   asp-action="ListRoles">Roles</a>
+                            </div>
                         </li>
                     }
                 </ul>
