--- a/TestingMVC/Views/Shared/_Layout.cshtml
+++ b/TestingMVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <li class="nav-item">
                         <a asp-action="Create" asp-controller="Home" class="nav-link">Create</a>
                     </li>
-                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin")||User.IsInRole("User"))
+                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
