--- a/TestingMVC/Views/Administration/EditUser.cshtml
+++ b/TestingMVC/Views/Administration/EditUser.cshtml
@@ -89,7 +89,7 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" style="width:auto" class="btn btn-primary">
+            <a asp-action="ManageUserClaims" asp-route-userId="@Model.Id" style="width:auto" class="btn btn-primary">
                 Manage Roles
             </a>
         </div>
