--- a/TestingMVC/Views/Administration/ListRoles.cshtml
+++ b/TestingMVC/Views/Administration/ListRoles.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<IdentityRole>
-
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 @{
     ViewBag.Title = "All Roles";
 }
@@ -22,10 +23,15 @@
             </div>
             <div class="card-footer">
                 <form method="post" asp-action="DeleteRole" asp-route-id="@role.Id">
-                    <a asp-controller="Administration" asp-action="EditRole"
-                       asp-route-id="@role.Id" class="btn btn-primary">Edit</a>
+                    @*Eger Editi Clim sahib deyilse bu buttonu gormeyecek*@
+                    @if ((await AuthorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
+                    {
+                        <a asp-controller="Administration" asp-action="EditRole"
+                           asp-route-id="@role.Id" class="btn btn-primary">Edit</a>
+                    }
 
-                    <span id="confirmDeleteSpan_@role.Id" style="display:none">
+
+                    <span id="confirmDeleteSpan_@role.Id" style="display: none">
                         <span>Are you sure you want to delete?</span>
                         <button type="submit" class="btn btn-danger">Yes</button>
                         <a href="#" class="btn btn-primary"
