--- a/TestingMVC/Views/Shared/_Layout.cshtml
+++ b/TestingMVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager;
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 <!DOCTYPE html>
 
 <html>
@@ -26,7 +28,7 @@
                     <li class="nav-item">
                         <a asp-action="Create" asp-controller="Home" class="nav-link">Create</a>
                     </li>
-                    @if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))
+                    @if (SignInManager.IsSignedIn(User) || (await AuthorizationService.AuthorizeAsync(User, "EditRolePolicy")).Succeeded)
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
